[gd_scene format=3 uid="uid://co85lx4ontryd"]

[ext_resource type="Script" uid="uid://c2c6xyvcosxva" path="res://scripts/dialogue_canvas.gd" id="1_wyjut"]
[ext_resource type="FontFile" uid="uid://bmaqvi7g1yeeg" path="res://Assets/Fonts/insanity.ttf" id="2_ujl4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujl4l"]
bg_color = Color(0.11304883, 0.11304886, 0.113048755, 1)

[node name="DialogueCanvas" type="CanvasLayer" unique_id=1685635480]
script = ExtResource("1_wyjut")

[node name="DialogueOverlay" type="Control" parent="." unique_id=1837727421]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextBox" type="PanelContainer" parent="DialogueOverlay" unique_id=22137122]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.75
anchor_right = 0.85
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ujl4l")

[node name="MarginContainer" type="MarginContainer" parent="DialogueOverlay/TextBox" unique_id=1577776230]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DialogueText" type="RichTextLabel" parent="DialogueOverlay/TextBox/MarginContainer" unique_id=1074334548]
clip_contents = false
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_ujl4l")
theme_override_font_sizes/normal_font_size = 45

[node name="ChoiceContainer" type="HBoxContainer" parent="DialogueOverlay" unique_id=476278971]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="e_corner" type="RichTextLabel" parent="DialogueOverlay" unique_id=897575826]
layout_mode = 0
offset_left = 945.0
offset_top = 913.0
offset_right = 2249.0
offset_bottom = 1089.0
theme_override_fonts/normal_font = ExtResource("2_ujl4l")
theme_override_font_sizes/normal_font_size = 20
text = "[ E ]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackPrompt" type="Label" parent="." unique_id=1638385515]
visible = false
offset_left = 110.0
offset_top = 959.0
offset_right = 198.0
offset_bottom = 1001.0
text = "[E] Back"
